PROD-12-18-19/force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TN-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>