PROD-12-18-19/force-app/main/default/objects/Transaction__c/fields/Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD__c</fullName>
    <label>Amount (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>