PROD-12-18-19/force-app/main/default/objects/Transaction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>