PROD-12-18-19/force-app/main/default/objects/Transaction__c/fields/Placement_Agent_Advised__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agent_Advised__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Agent/Advised</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>