PROD-12-18-19/force-app/main/default/objects/Transaction__c/fields/Transfer_To_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer To Legal Entity</label>
    <referenceTo>Account_Vehicle__c</referenceTo>
    <relationshipLabel>Transfers In</relationshipLabel>
    <relationshipName>Transaction1</relationshipName>
    <type>Lookup</type>
</CustomField>