PROD-12-18-19/force-app/main/default/objects/Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Original</fullName>
            </value>
            <value>
                <fullName>Follow-on</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Redemption</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
            <value>
                <fullName>Transfer out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>