PROD-12-18-19/force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Amount_USD__c</columns>
    <columns>Local_Currency_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>